starting stats and pomodoro implementation, linter settings, bug fixes
