# docs/openapi.yaml
@@ -303,6 +303,10 @@ paths:
                   type: string
                   format: date-time
                   nullable: true
+                category_id:
+                  type: integer
+                  format: int64
+                  nullable: true
       responses:
         "201":
           description: Задача создана
@@ -361,6 +365,10 @@ paths:
                 reminder_at:
                   type: string
                   format: date-time
+                  nullable: true
+                category_id:
+                  type: integer
+                  format: int64
                   nullable: true
                 status:
                   type: string
